--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,25 @@
 
   <title>laundry</title>
   <link rel="manifest" href="manifest.json">
+
+  <script src="https://www.gstatic.com/firebasejs/10.12.3/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.3/firebase-firestore-compat.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyBsH3nQcp5HsBYUtr_lsZEbP0SELoEv-4U",
+  authDomain: "laundry-tracking-44be5.firebaseapp.com",
+  projectId: "laundry-tracking-44be5",
+  storageBucket: "laundry-tracking-44be5.appspot.com",
+  messagingSenderId: "96292080853",
+  appId: "1:96292080853:web:3f4bd92721dfe45059265c",
+  measurementId: "G-186M3HBPGS"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
